# mitmreplace

./: AUTHORS  Makefile  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
src/: Makefile  Makefile.am  Makefile.in  checksum.c  forward.c  main.c  mitmreplace  patterns.c  patterns.xml  replace.c
src/.deps/: mitmreplace-checksum.Po  mitmreplace-forward.Po  mitmreplace-main.Po  mitmreplace-patterns.Po  mitmreplace-replace.Po
src/inc/: checksum.h  forward.h  main.h  patterns.h  replace.h
